--- a/gtk/src/adw-gtk3/gtk-3.0/gtk.css
+++ b/gtk/src/adw-gtk3/gtk-3.0/gtk.css
@@ -1647,7 +1647,7 @@ row { transition: all 150ms cubic-bezier(0.25, 0.46, 0.45, 0.94); }
 
 row:hover { transition: none; }
 
-row:backdrop { transition: 200ms ease-out; }
+row:backdrop { transition: 200ms ease-out; color: rgba(150, 150, 150, 0.9); }
 
 row.activatable.has-open-popup, row.activatable:hover { background-color: alpha(currentColor,0.07); }
 
@@ -1661,9 +1661,11 @@ row.activatable:selected:active { background-color: alpha(currentColor,0.19); }
 
 row.activatable:selected.has-open-popup, row.activatable:selected:hover { background-color: alpha(currentColor,0.13); color: rgba(0, 0, 0, 0.8); }
 
-row.activatable:selected:backdrop { background-color: #1c71d8; }
+row.activatable:selected:backdrop { background-color: alpha(currentColor,0.07); color: rgba(150, 150, 150, 0.9); }
 
 row:selected { background-color: alpha(currentColor,0.1); }
+
+scrolledwindow list row { margin: 0 6px; border-radius: 6px; }
 
 /********************* App Notifications * */
 .app-notification, .app-notification.frame { padding: 10px; border-radius: 0 0 5px 5px; background-color: rgba(53, 53, 53, 0.9); background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), transparent 2px); background-clip: padding-box; }
